[gd_scene load_steps=19 format=3 uid="uid://bgjp5kk3emord"]

[ext_resource type="Script" uid="uid://c3np5cyr0u635" path="res://entities/chaser/chaser.gd" id="1_eubvw"]
[ext_resource type="Texture2D" uid="uid://b1w5hmwxaan5r" path="res://Art/hallway3b/devourer.png" id="2_flupr"]
[ext_resource type="AudioStream" uid="uid://o2m100osvs62" path="res://Audio/hallway3b/tv-static-noise-291374.mp3" id="3_agn03"]
[ext_resource type="Texture2D" uid="uid://cen3owwbh0f5w" path="res://VFX/tv_static/Screenshot_20250803-155420.png" id="3_vc8fo"]
[ext_resource type="Texture2D" uid="uid://yxvnvj3no5db" path="res://VFX/tv_static/Screenshot_20250803-155423.png" id="4_b36b3"]
[ext_resource type="Texture2D" uid="uid://b50m62yhqg1v4" path="res://VFX/tv_static/Screenshot_20250803-155427.png" id="5_760n7"]
[ext_resource type="Texture2D" uid="uid://bdi4ee20af6im" path="res://VFX/tv_static/Screenshot_20250803-155440.png" id="6_flupr"]
[ext_resource type="Texture2D" uid="uid://ds618521oyo1p" path="res://VFX/tv_static/Screenshot_20250803-155435.png" id="7_0e64b"]
[ext_resource type="AudioStream" uid="uid://7hy8ag2ftjcy" path="res://Audio/hallway3b/sfx6-horror-suspense-hiding-heartbeat-loop-323052.mp3" id="9_b36b3"]
[ext_resource type="AudioStream" uid="uid://dellqi1wfn10e" path="res://Audio/hallway3b/8-bit-horror-noises-63944.mp3" id="9_flupr"]
[ext_resource type="AudioStream" uid="uid://drmfsc77s7pd0" path="res://Audio/hallway3b/fire-in-furnace-318347.mp3" id="10_760n7"]
[ext_resource type="Texture2D" uid="uid://b2e50hn2busxu" path="res://Art/Stuff2/2d_lights_and_shadows_neutral_point_light.webp" id="12_0e64b"]

[sub_resource type="SpriteFrames" id="SpriteFrames_agn03"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_vc8fo")
}, {
"duration": 1.0,
"texture": ExtResource("4_b36b3")
}, {
"duration": 1.0,
"texture": ExtResource("5_760n7")
}, {
"duration": 1.0,
"texture": ExtResource("6_flupr")
}, {
"duration": 1.0,
"texture": ExtResource("7_0e64b")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_fldqy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tvstatic:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effects/tv_static:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Effects/tv_static:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Effects/tv_static:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_agn03"]
resource_name = "on_spawn"
length = 0.7
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tvstatic:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.525, 0.55, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Effects/tv_static:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.575, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.666667), Color(1, 1, 1, 0.666667), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Effects/tv_static:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175, 0.2, 0.225, 0.25, 0.275, 0.3, 0.325, 0.35, 0.375, 0.4, 0.425, 0.45, 0.475, 0.5, 0.525, 0.55, 0.575, 0.6, 0.625, 0.65, 0.675),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 0, 1, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("tvstatic:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.2]
}

[sub_resource type="Animation" id="Animation_760n7"]
resource_name = "tv_static_jumpscare"
length = 2.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tvstatic:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.25, 0.45, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("tvstatic:pitch_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Effects/tv_static:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.025, -5.96046e-08, 0.0249999, 0.05, 0.075, 0.1, 0.125, 0.15, 0.175, 0.2, 0.225, 0.25, 0.275, 0.3, 0.325, 0.35, 0.375, 0.4, 0.425, 0.45, 0.475, 0.5, 0.525, 0.55, 0.575, 0.6, 0.625, 0.65, 0.703857, 0.728857, 0.753857, 0.778857, 0.803857, 0.828857, 0.853857, 0.878857, 0.903857, 0.928857, 0.953857, 0.978857, 1.00386, 1.02886, 1.05386, 1.07886, 1.10386, 1.12886, 1.15386, 1.17886, 1.20386, 1.22886, 1.25386, 1.27886, 1.30386, 1.32886, 1.35386, 1.37886, 1.4, 1.425, 1.45, 1.475, 1.5, 1.525, 1.55, 1.575, 1.6, 1.625, 1.65, 1.675, 1.7, 1.725, 1.75, 1.775, 1.8, 1.825, 1.85, 1.875, 1.9, 1.925, 1.95, 1.975, 2, 2.025, 2.05, 2.075),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 0, 1, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 0, 1, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 0, 1, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 0, 1, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 0, 1, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Effects/tv_static:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Effects/tv_static:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25, 0.3, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fldqy"]
_data = {
&"RESET": SubResource("Animation_fldqy"),
&"on_spawn": SubResource("Animation_agn03"),
&"tv_static_jumpscare": SubResource("Animation_760n7")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_760n7"]
size = Vector2(306, 322)

[node name="chaser" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_eubvw")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_flupr")

[node name="Effects" type="CanvasLayer" parent="."]
layer = 2

[node name="tv_static" type="AnimatedSprite2D" parent="Effects"]
modulate = Color(1, 1, 1, 0)
z_index = 4
position = Vector2(640, 360)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_agn03")

[node name="tvstatic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_agn03")
pitch_scale = 0.5
bus = &"SFX"

[node name="jumpscare1" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_flupr")
volume_db = -5.0
pitch_scale = 0.5
bus = &"SFX"

[node name="anim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_fldqy")
}
autoplay = "on_spawn"

[node name="sfx" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="heartbeat" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("9_b36b3")
volume_db = 20.0
autoplay = true
max_distance = 20000.0
attenuation = 2.0
bus = &"SFX"

[node name="near" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource("10_760n7")
volume_db = 10.0
pitch_scale = 2.0
autoplay = true
max_distance = 3000.0
attenuation = 2.0
bus = &"SFX"
area_mask = 16385

[node name="lifeTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="runStartTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="jumpscareBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="jumpscareBox"]
shape = SubResource("RectangleShape2D_760n7")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-499, 7)
blend_mode = 1
texture = ExtResource("12_0e64b")
texture_scale = 4.0

[connection signal="timeout" from="lifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="timeout" from="runStartTimer" to="." method="_on_run_start_timer_timeout"]
[connection signal="body_entered" from="jumpscareBox" to="." method="_on_jumpscare_box_body_entered"]
